add moves conic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
 	"C_Cpp.errorSquiggles": "disabled",
 	"files.associations": {
-		"fdf.h": "c"
+		"fdf.h": "c",
+		"array": "c",
+		"string": "c",
+		"string_view": "c",
+		"span": "c"
 	}
 }
